@@ -137,6 +137,7 @@ veris(bool(-1), True)
 veris(bool(0), False)
 veris(bool("hello"), True)
 veris(bool(""), False)
+veris(bool(), False)
 
 veris(hasattr([], "append"), True)
 veris(hasattr([], "wobble"), False)
